--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&subset=latin,latin-ext" rel="stylesheet">
     <title>Funnel Cloud Client</title>
   </head>
   <body>
